@@ -79,7 +79,7 @@ sets.TP = {
     head="Flam. Zucchetto +2",
 	body="Ken. Samue +1",
     hands="Wakido Kote +3",
-    legs="Ken. Hakama +1",
+    legs="Wakido Haidate +3",
     feet="Flam. Gambieras +2",
     neck="Sam. Nodowa +1",
     waist="Ioskeha Belt +1",
@@ -94,7 +94,7 @@ sets.TP.Acc = {
     head="Flam. Zucchetto +2",
 	body="Ken. Samue +1",
     hands="Wakido Kote +3",
-    legs="Ken. Hakama +1",
+    legs="Wakido Haidate +3",
     feet="Flam. Gambieras +2",
     neck="Sam. Nodowa +1",
     waist="Ioskeha Belt +1",
@@ -110,7 +110,7 @@ sets.TP.Buffed = {
     head="Flam. Zucchetto +2",
 	body="Ken. Samue +1",
     hands="Wakido Kote +3",
-    legs="Ken. Hakama +1",
+    legs="Wakido Haidate +3",
     feet="Flam. Gambieras +2",
     neck="Sam. Nodowa +1",
     waist="Ioskeha Belt +1",
