@@ -45,7 +45,7 @@ if player.Name == 'Khory' then
     feet={ name="Amalric Nails", augments={'Mag. Acc.+15','"Mag.Atk.Bns."+15','"Conserve MP"+6',}},
     neck="Loricate Torque",
     waist="Fucho-no-Obi",
-    left_ear="Halasz Earring",
+    left_ear="Malignance Earring",
     right_ear="Odnowa Earring +1",
     left_ring="Defending Ring",
     right_ring="Karieyh Ring",
@@ -62,7 +62,7 @@ if player.Name == 'Khory' then
     feet={ name="Amalric Nails", augments={'Mag. Acc.+15','"Mag.Atk.Bns."+15','"Conserve MP"+6',}},
     neck="Loricate Torque",
     waist="Fucho-no-Obi",
-    left_ear="Halasz Earring",
+    left_ear="Malignance Earring",
     right_ear="Odnowa Earring +1",
     left_ring="Defending Ring",
     right_ring="Karieyh Ring",
@@ -96,7 +96,7 @@ if player.Name == 'Khory' then
     feet={ name="Merlinic Crackows", augments={'Mag. Acc.+21','"Fast Cast"+6','INT+1',}},
     neck="Voltsurge Torque",
     waist="witful belt",
-    left_ear="Halasz Earring",
+    left_ear="Malignance Earring",
     left_ring="Kishar Ring",
     right_ring="Lebeche Ring",
     back={ name="Lugh's Cape", augments={'"Fast Cast"+10',}},
@@ -128,7 +128,7 @@ if player.Name == 'Khory' then
     feet="Arbatel Loafers +1",
     neck="Mizu. Kubikazari",
     waist="Eschan Stone",
-    left_ear="Hermetic Earring",
+    left_ear="Malignance Earring",
     right_ear="Friomisi Earring",
     left_ring="Jhakri Ring",
     right_ring="Mujin Band",
@@ -146,8 +146,8 @@ if player.Name == 'Khory' then
     feet="Arbatel Loafers +1",
     neck="Mizu. Kubikazari",
     waist="Eschan Stone",
-    left_ear="Friomisi Earring",
-    right_ear="Strophadic Earring",
+    left_ear="Malignance Earring",
+    right_ear="Friomisi Earring",
     left_ring="Jhakri Ring",
     right_ring="Mujin Band",
     back={ name="Lugh's Cape", augments={'INT+20','Mag. Acc+20 /Mag. Dmg.+20','INT+10','"Mag.Atk.Bns."+10',}},
@@ -164,8 +164,8 @@ if player.Name == 'Khory' then
     feet="Arbatel Loafers +1",
     neck="Mizu. Kubikazari",
     waist="Eschan Stone",
-    left_ear="Friomisi Earring",
-    right_ear="Strophadic Earring",
+    left_ear="Malignance Earring",
+    right_ear="Friomisi Earring",
     left_ring="Jhakri Ring",
     right_ring="Mujin Band",
     back={ name="Lugh's Cape", augments={'INT+20','Mag. Acc+20 /Mag. Dmg.+20','INT+10','"Mag.Atk.Bns."+10',}},
