@@ -2,5 +2,5 @@ Relic I want:
 Head: sam / cor / run / WAR
 Body: SAM / COR / war
 Hands: SAM
-Legs: run
-Feet: sam / COR / war
+Legs: run / MNK 
+Feet: sam / COR / war 
